force-app/main/default/objects/Booking__c/fields/Country_3__c.field-meta.xml
<CustomField>
    <fullName>Country_3__c</fullName>
    <label>Country 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
                <isActive>false</isActive>
                <label>Close</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>