force-app/main/default/objects/Booking__c/fields/CP_CRM_Name__c.field-meta.xml
<CustomField>
    <fullName>CP_CRM_Name__c</fullName>
    <label>CP/SC CRM Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>