force-app/main/default/objects/Booking__c/fields/CP_Sobha_Connect_ID__c.field-meta.xml
<CustomField>
    <fullName>CP_Sobha_Connect_ID__c</fullName>
    <formula>if (
NOT(ISBLANK( Channel_Partner__c )),Channel_Partner__r.Channel_Partner_Id__c ,
if
( NOT(ISBLANK ( Sobha_Connect__c )), Sobha_Connect__r.Name ,&quot;&quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP / Sobha Connect ID</label>
    <type>Text</type>
</CustomField>