force-app/main/default/objects/Booking__c/fields/CP_Sobha_Connect_Manager__c.field-meta.xml
<CustomField>
    <fullName>CP_Sobha_Connect_Manager__c</fullName>
    <formula>if (
NOT(ISBLANK( Channel_Partner__c )),Channel_Partner__r.Channel_Relationship_Manager__c ,
if
( NOT(ISBLANK ( Sobha_Connect__c )), Sobha_Connect__r.Channel_Relationship_Manager__c ,&quot;&quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP / Sobha Connect Manager</label>
    <type>Text</type>
</CustomField>