force-app/main/default/objects/Booking__c/fields/CP_Team_Incentive__c.field-meta.xml
<CustomField>
    <fullName>CP_Team_Incentive__c</fullName>
    <label>CP Team Incentive</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>