force-app/main/default/objects/Booking__c/fields/Created_Year__c.field-meta.xml
<CustomField>
    <fullName>Created_Year__c</fullName>
    <formula>Text(YEAR( DATEVALUE(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Year</label>
    <type>Text</type>
</CustomField>