force-app/main/default/objects/Booking__c/fields/CRM_Qualified_Date__c.field-meta.xml
<CustomField>
    <fullName>CRM_Qualified_Date__c</fullName>
    <label>CRM Qualified Date</label>
    <type>Date</type>
</CustomField>