force-app/main/default/objects/Booking__c/fields/CRM_Remarks__c.field-meta.xml
<CustomField>
    <fullName>CRM_Remarks__c</fullName>
    <label>CRM Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>