force-app/main/default/objects/Booking__c/fields/CRM_Seller_representative__c.field-meta.xml
<CustomField>
    <fullName>CRM_Seller_representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM Seller representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Booking0e8H</relationshipName>
    <type>Lookup</type>
</CustomField>