force-app/main/default/objects/Booking__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <label>Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted to Audit</fullName>
            </value>
            <value>
                <fullName>Document Verification Not Started</fullName>
            </value>
            <value>
                <fullName>Document Verification Accepted</fullName>
            </value>
            <value>
                <fullName>Document Verification Rejected</fullName>
            </value>
            <value>
                <fullName>Audit Accepted</fullName>
            </value>
            <value>
                <fullName>Audit Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>