force-app/main/default/objects/Booking__c/fields/Customer_Name_and_Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_and_Unit_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <label># Of Units</label>
    <type>Checkbox</type>
</CustomField>