force-app/main/default/objects/Booking__c/fields/Customer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Customer_Profile__c</fullName>
    <label>Customer Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Aviation Industry/Pilot</fullName>
            </value>
            <value>
                <fullName>Banking Sector</fullName>
            </value>
            <value>
                <fullName>Business Owner</fullName>
            </value>
            <value>
                <fullName>Celebrity</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Construction/Architecture Professionals</fullName>
            </value>
            <value>
                <fullName>Consulting/Professional Services</fullName>
            </value>
            <value>
                <fullName>Creative/Artistic Professionals</fullName>
            </value>
            <value>
                <fullName>Diplomat</fullName>
            </value>
            <value>
                <fullName>Education Professionals</fullName>
            </value>
            <value>
                <fullName>Entrepreneurs/Self-Employed</fullName>
            </value>
            <value>
                <fullName>Healthcare Professionals/Medical Practitioners</fullName>
            </value>
            <value>
                <fullName>Hospitality Industry</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>IT/Computer Professionals</fullName>
            </value>
            <value>
                <fullName>Journalism</fullName>
            </value>
            <value>
                <fullName>Legal Professionals</fullName>
            </value>
            <value>
                <fullName>Marketing/Media Sector</fullName>
            </value>
            <value>
                <fullName>Marketing Sector</fullName>
            </value>
            <value>
                <fullName>Middle-Level Manager</fullName>
            </value>
            <value>
                <fullName>Non Profitable Business</fullName>
            </value>
            <value>
                <fullName>Professional/Technical Staff</fullName>
            </value>
            <value>
                <fullName>Real Estate Brokers</fullName>
            </value>
            <value>
                <fullName>Royal Family members</fullName>
            </value>
            <value>
                <fullName>Salesperson</fullName>
            </value>
            <value>
                <fullName>Sobha Employee</fullName>
            </value>
            <value>
                <fullName>Sports Professionals</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>