force-app/main/default/objects/Booking__c/fields/Date_of_Generation_of_SPA__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Generation_of_SPA__c</fullName>
    <label>Date of Generation of SPA</label>
    <type>Date</type>
</CustomField>