force-app/main/default/objects/Booking__c/fields/Date_of_Pre_registration_Completion__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Pre_registration_Completion__c</fullName>
    <label>Date of Pre-registration Completion</label>
    <type>Date</type>
</CustomField>