force-app/main/default/objects/Booking__c/fields/Date_of_Pre_Registration_Initiation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Pre_Registration_Initiation__c</fullName>
    <label>Date of Pre-Registration Initiation</label>
    <type>Date</type>
</CustomField>