force-app/main/default/objects/Booking__c/fields/Date_of_Sending_Certificate_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Sending_Certificate_to_Customer__c</fullName>
    <label>Date of Sending Certificate to Customer</label>
    <type>Date</type>
</CustomField>