force-app/main/default/objects/Booking__c/fields/Date_of_Signing_by_Sobha_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Signing_by_Sobha_Signatory__c</fullName>
    <label>Date of Signing by Sobha Signatory</label>
    <type>Date</type>
</CustomField>