force-app/main/default/objects/Booking__c/fields/Date_of_Submission_of_Documents_to_DLD__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Submission_of_Documents_to_DLD__c</fullName>
    <label>Date of Submission of Documents to DLD</label>
    <type>Date</type>
</CustomField>