force-app/main/default/objects/Booking__c/fields/Declared_as__c.field-meta.xml
<CustomField>
    <fullName>Declared_as__c</fullName>
    <label>Declared as</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>