force-app/main/default/objects/Booking__c/fields/Developer_Final_Notice_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Developer_Final_Notice_Sent_Date__c</fullName>
    <label>Developer Final Notice Sent Date</label>
    <type>Date</type>
</CustomField>