force-app/main/default/objects/Booking__c/fields/Developer_ID__c.field-meta.xml
<CustomField>
    <fullName>Developer_ID__c</fullName>
    <formula>Unit__r.Tower__r.RDS_Company_Code__r.Developer_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Developer ID</label>
    <type>Text</type>
</CustomField>