force-app/main/default/objects/Booking__c/fields/DeveloperID_Arabic__c.field-meta.xml
<CustomField>
    <fullName>DeveloperID_Arabic__c</fullName>
    <formula>Unit__r.Tower__r.RDS_Company_Code__r.Developer_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DeveloperID_Arabic</label>
    <type>Text</type>
</CustomField>