force-app/main/default/objects/Booking__c/fields/Development_Charges_ST_Booking__c.field-meta.xml
<CustomField>
    <fullName>Development_Charges_ST_Booking__c</fullName>
    <label>Development Charges (GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>