force-app/main/default/objects/Booking__c/fields/Deviated_Earmarked_Car_Parks__c.field-meta.xml
<CustomField>
    <fullName>Deviated_Earmarked_Car_Parks__c</fullName>
    <label>Deviated Earmarked Car Parks</label>
    <type>TextArea</type>
</CustomField>