force-app/main/default/objects/Booking__c/fields/Dewa_Number__c.field-meta.xml
<CustomField>
    <fullName>Dewa_Number__c</fullName>
    <label>Dewa Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>