force-app/main/default/objects/Booking__c/fields/Discount_Offered__c.field-meta.xml
<CustomField>
    <fullName>Discount_Offered__c</fullName>
    <label>Discount Offered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>