force-app/main/default/objects/Booking__c/fields/DLD_2_receipt_is_created__c.field-meta.xml
<CustomField>
    <fullName>DLD_2_receipt_is_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DLD 2 % receipt is created</label>
    <type>Checkbox</type>
</CustomField>