force-app/main/default/objects/Booking__c/fields/DLD_Amount__c.field-meta.xml
<CustomField>
    <fullName>DLD_Amount__c</fullName>
    <formula>((4 / 100) *  Quotation__r.Total_Agreement_Value_Bucket__c ) + 1150</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>