force-app/main/default/objects/Booking__c/fields/DLD_Amount_Paid_In__c.field-meta.xml
<CustomField>
    <fullName>DLD_Amount_Paid_In__c</fullName>
    <label>DLD Amount Paid In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate account</fullName>
            </value>
            <value>
                <fullName>ESCROW account</fullName>
            </value>
            <value>
                <fullName>Corporate and ESCROW account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>