force-app/main/default/objects/Booking__c/fields/DLD_Fees__c.field-meta.xml
<CustomField>
    <fullName>DLD_Fees__c</fullName>
    <formula>(Agreement_Value__c * (4/100))+ 1150</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLD Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>