force-app/main/default/objects/Booking__c/fields/DLD_Percentage__c.field-meta.xml
<CustomField>
    <fullName>DLD_Percentage__c</fullName>
    <formula>IF(Total_DLD_Amt_Paid__c &gt;= DLD_Amount__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLD Percentage</label>
    <type>Text</type>
</CustomField>