force-app/main/default/objects/Booking__c/fields/DLD_Termination_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>DLD_Termination_Completion_Date__c</fullName>
    <label>DLD Termination Completion Date</label>
    <type>Date</type>
</CustomField>