force-app/main/default/objects/Booking__c/fields/DM_Booking_Form_Signed_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>DM_Booking_Form_Signed_by_Customer__c</fullName>
    <description>This field is used for PS Data Migration</description>
    <formula>NOT(ISNULL( Signed_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DM-Booking Form Signed by Customer</label>
    <type>Checkbox</type>
</CustomField>