force-app/main/default/objects/Booking__c/fields/DM_PCC_Document_Generated__c.field-meta.xml
<CustomField>
    <fullName>DM_PCC_Document_Generated__c</fullName>
    <formula>PCC_Approved_By_Audit__c</formula>
    <label>DM-PCC Document Generated</label>
    <type>Checkbox</type>
</CustomField>