force-app/main/default/objects/Booking__c/fields/DM_PS_Active__c.field-meta.xml
<CustomField>
    <fullName>DM_PS_Active__c</fullName>
    <description>This field is used for PS Data Migration</description>
    <formula>NOT(ISPICKVAL(Status__c, &quot;Cancelled&quot;))</formula>
    <label>DM-PS Active</label>
    <type>Checkbox</type>
</CustomField>