force-app/main/default/objects/Booking__c/fields/Document_Verification_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Document_Verification_Remarks__c</fullName>
    <label>Document Verification Remarks</label>
    <type>TextArea</type>
</CustomField>