force-app/main/default/objects/Booking__c/fields/DS_Intimation_Date__c.field-meta.xml
<CustomField>
    <fullName>DS_Intimation_Date__c</fullName>
    <label>DS Intimation Date</label>
    <type>DateTime</type>
</CustomField>