force-app/main/default/objects/Booking__c/fields/Due_Amount_For_Process__c.field-meta.xml
<CustomField>
    <fullName>Due_Amount_For_Process__c</fullName>
    <formula>IF(AND(Milestone_Due_Till_Date__c &gt; 0,Milestone_Due_Till_Date__c &gt; Paid_Amount_For_Process__c),Milestone_Due_Till_Date__c - Paid_Amount_For_Process__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Amount For Process</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>