force-app/main/default/objects/Booking__c/fields/Due_Payments__c.field-meta.xml
<CustomField>
    <fullName>Due_Payments__c</fullName>
    <formula>IF( Milestone_Due_Till_Date__c &gt;= Total_On_Account_Money_With_Registration__c , 
(Milestone_Due_Till_Date__c -  Total_On_Account_Money_With_Registration__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>