force-app/main/default/objects/Booking__c/fields/Email_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_2__c</fullName>
    <label>Email Address 2</label>
    <type>Email</type>
</CustomField>