force-app/main/default/objects/Booking__c/fields/Email_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_3__c</fullName>
    <label>Email Address 3</label>
    <type>Email</type>
</CustomField>