force-app/main/default/objects/Booking__c/fields/Email_Address_4__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_4__c</fullName>
    <label>Email Address 4</label>
    <type>Email</type>
</CustomField>