force-app/main/default/objects/Booking__c/fields/Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name__c</fullName>
    <formula>IF( Project__r.Name = &apos;Sobha Siniya Island&apos;, &apos;Sobha Siniya Island&apos;, &apos;Sobha LLC&apos; )</formula>
    <label>Entity Name</label>
    <type>Text</type>
</CustomField>