force-app/main/default/objects/Booking__c/fields/Events__c.field-meta.xml
<CustomField>
    <fullName>Events__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Events</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>Booking (Events)</relationshipLabel>
    <relationshipName>Booking1</relationshipName>
    <type>Lookup</type>
</CustomField>