force-app/main/default/objects/Booking__c/fields/Executed_Copy_Courier_Tracking_No__c.field-meta.xml
<CustomField>
    <fullName>Executed_Copy_Courier_Tracking_No__c</fullName>
    <label>Executed Copy Courier Tracking No.</label>
    <length>200</length>
    <type>Text</type>
</CustomField>