force-app/main/default/objects/Booking__c/fields/Extra_Amount_to_be_adjusted__c.field-meta.xml
<CustomField>
    <fullName>Extra_Amount_to_be_adjusted__c</fullName>
    <label>Extra Amount to be adjusted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>