force-app/main/default/objects/Booking__c/fields/Final_Corporate_Account_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Corporate_Account_Amount__c</fullName>
    <formula>Initial_Corporate_Amount__c - Amount_Transferred_from_Corp_to_ESCROW__c - Amount_Transferred_to_Registration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Corporate Account Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>