force-app/main/default/objects/Booking__c/fields/Final_Notice_Eslam_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Final_Notice_Eslam_Approval_Status__c</fullName>
    <label>Final Notice Eslam Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unsubmitted</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>