force-app/main/default/objects/Booking__c/fields/Final_Notice_Receive_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Notice_Receive_Date__c</fullName>
    <label>Final Notice Receive Date</label>
    <type>Date</type>
</CustomField>