force-app/main/default/objects/Booking__c/fields/Flat_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Flat_Applicants__c</fullName>
    <label>Flat Applicants</label>
    <length>255</length>
    <type>Text</type>
</CustomField>