force-app/main/default/objects/Booking__c/fields/Floor_Plan_2__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plan_2__c</fullName>
    <label>Floor Plan 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>