force-app/main/default/objects/Booking__c/fields/Forfeited_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forfeited_Amount__c</fullName>
    <label>Forfeited Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>