force-app/main/default/objects/Booking__c/fields/Forfeiture_Notice_Notice_Sent_Date_Co__c.field-meta.xml
<CustomField>
    <fullName>Forfeiture_Notice_Notice_Sent_Date_Co__c</fullName>
    <label>Forfeiture Notice Notice Date (Courier)</label>
    <type>Date</type>
</CustomField>