force-app/main/default/objects/Booking__c/fields/Forfeiture_Notice_Received_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>Forfeiture_Notice_Received_by_Customer__c</fullName>
    <label>Forfeiture Notice Received by Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>