force-app/main/default/objects/Booking__c/fields/Forfeiture_Notice_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Forfeiture_Notice_Sent_Date__c</fullName>
    <label>Forfeiture Notice Sent Date</label>
    <type>Date</type>
</CustomField>