force-app/main/default/objects/Booking__c/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <formula>Opportunity__r.GCLID__c</formula>
    <label>GCLID</label>
    <type>Text</type>
</CustomField>