force-app/main/default/objects/Booking__c/fields/Go_AHead_from_Collections__c.field-meta.xml
<CustomField>
    <fullName>Go_AHead_from_Collections__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Go AHead from Collections</label>
    <type>Checkbox</type>
</CustomField>