force-app/main/default/objects/Booking__c/fields/Handover_Schdule_Date__c.field-meta.xml
<CustomField>
    <fullName>Handover_Schdule_Date__c</fullName>
    <label>Handover Schdule Date</label>
    <type>Date</type>
</CustomField>