force-app/main/default/objects/Booking__c/fields/Home_Orientation_Date__c.field-meta.xml
<CustomField>
    <fullName>Home_Orientation_Date__c</fullName>
    <label>Home Orientation Date</label>
    <type>Date</type>
</CustomField>