force-app/main/default/objects/Booking__c/fields/IBAN_Tax__c.field-meta.xml
<CustomField>
    <fullName>IBAN_Tax__c</fullName>
    <label>IBAN (VAT)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>