force-app/main/default/objects/Booking__c/fields/IFSC_Code_Flat_Cost__c.field-meta.xml
<CustomField>
    <fullName>IFSC_Code_Flat_Cost__c</fullName>
    <label>IFSC Code(Flat Cost)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>