force-app/main/default/objects/Booking__c/fields/Incentive_Amount__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Amount__c</fullName>
    <formula>Agreement_Value__c * SM_Incentive_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incentive Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>