force-app/main/default/objects/Booking__c/fields/Incentive_paid__c.field-meta.xml
<CustomField>
    <fullName>Incentive_paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Incentive paid (AED)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>