force-app/main/default/objects/Booking__c/fields/Incentive_Paid_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Paid_Percentage__c</fullName>
    <formula>If(Agreement_Value__c &gt; 0 &amp;&amp;  Total_Amount_Received__c &gt; 0,
(Total_Amount_Received__c )/(Agreement_Value__c + Tax_on_Purchase_Price__c),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incentive Paid Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>