force-app/main/default/objects/Booking__c/fields/Initiate_SBTR__c.field-meta.xml
<CustomField>
    <fullName>Initiate_SBTR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to initiate SBTR creation in case of manual Booking</description>
    <inlineHelpText>Will trigger SBTR creation in case of manual Booking</inlineHelpText>
    <label>Initiate SBTR</label>
    <type>Checkbox</type>
</CustomField>