force-app/main/default/objects/Booking__c/fields/Installment_Due_Refer_Annexure__c.field-meta.xml
<CustomField>
    <fullName>Installment_Due_Refer_Annexure__c</fullName>
    <formula>Total_Agreement_Value_Demanded__c- Total_On_Account_Money_With_Registration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installment Due (Refer Annexure)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>