force-app/main/default/objects/Booking__c/fields/Interest_Charges__c.field-meta.xml
<CustomField>
    <fullName>Interest_Charges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interest Charges (AED)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>