force-app/main/default/objects/Booking__c/fields/Is_Booking_Form_Attached__c.field-meta.xml
<CustomField>
    <fullName>Is_Booking_Form_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Booking Form Attached</label>
    <type>Checkbox</type>
</CustomField>