force-app/main/default/objects/Booking__c/fields/Is_Logged_in_User_Sales_Head__c.field-meta.xml
<CustomField>
    <fullName>Is_Logged_in_User_Sales_Head__c</fullName>
    <formula>IF( Sales_Head__c = $User.Id , True , False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Logged in User Sales Head</label>
    <type>Checkbox</type>
</CustomField>