force-app/main/default/objects/Booking__c/fields/Is_Pre_registration_Fees_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_Pre_registration_Fees_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pre-registration Fees Paid</label>
    <type>Checkbox</type>
</CustomField>