force-app/main/default/objects/Booking__c/fields/IS_SO__c.field-meta.xml
<CustomField>
    <fullName>IS_SO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS SO</label>
    <type>Checkbox</type>
</CustomField>