force-app/main/default/objects/Booking__c/fields/Last_Call_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Attempt_Date__c</fullName>
    <label>Last Action Attempt Date</label>
    <type>DateTime</type>
</CustomField>