force-app/main/default/objects/Booking__c/fields/Last_Call_Attempted_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Attempted_By__c</fullName>
    <label>Last Action Attempted By</label>
    <length>200</length>
    <type>Text</type>
</CustomField>